# knn

./: CURRICULUM_GUIDE.md  curriculum.py  curriculum_tasks.py  main.py  pyproject.toml
fg_stuff/: sphere10m.ac  sphere10m.xml
graphs/: DDPG_12.csv  DDPG_13.csv  DDPG_14.csv  DDPG_15.csv  DDPG_16.csv  DDPG_17.csv  DDPG_18.csv  DDPG_19.csv  DDPG_1_actor.csv  DDPG_1_critic.csv  DDPG_20.csv  DDPG_21.csv  DDPG_22.csv  DDPG_23.csv  DDPG_24.csv  DDPG_25.csv  DDPG_26.csv  DDPG_27.csv  DDPG_28.csv  DDPG_2_critic.csv  DDPG_30.csv  DDPG_31.csv  DDPG_32.csv  DDPG_33.csv  DDPG_34.csv  DDPG_35.csv  DDPG_3_critic.csv  DDPG_4_critic.csv  DDPG_5_critic.csv  DDPG_6_critic.csv  DDPG_7_critic.csv  DDPG_8_critic.csv  DDPG_9_critic.csv  stage_1_run_1.csv
logs/PPO/stage_1_1/: events.out.tfevents.1776095430.DESKTOP-AGMV6U2.17104.0
logs/PPO/stage_1_2/: events.out.tfevents.1776096419.DESKTOP-AGMV6U2.19112.0
logs/curriculum/stage_1_1/: events.out.tfevents.1775986913.DESKTOP-AGMV6U2.1500.0
logs/curriculum/stage_1_2/: events.out.tfevents.1775988636.DESKTOP-AGMV6U2.13368.0
logs/curriculum/stage_1_3/: events.out.tfevents.1776012481.DESKTOP-AGMV6U2.24288.0
models/: ddpg_tuning_lr0.0001_100_000  ddpg_tuning_lr0.0003_100_000  ddpg_tuning_lr0.001_100_000
proposal/: proposal.tex
src/: train_waypoint.ipynb  train_waypoint.py  watch_replay.py  waypoint.py  waypoints_visualize.py  waypointsgen.py
toys/: aircraft-generator.py  curriculum2.py  curriculum2watch.py  jsbgym-test-render.py  jsbgym-test-rl.py  ondrik.py  train_custom.py  train_ddpg.ipynb  training.py  watch_pilot.py
(+49 files in other folders)
